  is used. Applied same fix to ListCheck. (Rev. 33)
* Updated unittests to replace "fail" checks with appropriate "assert" checks
* cleaned up some of the multiline logging messages
* Cleaned up the main XCheck.__call__ method using `check_node`,
  `check_attributes`, `check_node_contents`, `check_node_ordered_children`,
  and `check_node_unordered_children`.
* Removed the verbose parameter to calling XCheck objects

Release 0.7.1 - March 22, 2014
------------------------------

Bug Fixes
^^^^^^^^^

* Fixed bug #10 - SelectionCheck now validates None if `allow_none` or
  ``required`` is true
* Completely rewrote XCheck.xpath_to and XCheck.get methods
* Completely rewrote XCheck.insert_node method


Release 0.7.0 - March 18, 2014
------------------------------

New Features
^^^^^^^^^^^^

* Added callback feature in ListCheck and SelectionCheck
* Added utils.list_requirements
* Added cross-check rules

Bug Fixes
^^^^^^^^^

* Fixed bug in BoolCheck where ``none_is_false`` wasn't worknig
* Lots of documentation cleanup and fixes
* Fixed bug in Wrap that tried to check non-existent elements
* Fixed bug in :func:`load_checker` that assigned the wrong error
* Fixed bug #6: passing a checker attribute as a string was not being coerced
* Fixed bug in XCheck.tokens that was ignoring the children_only attribute
  (This also makes XCheck.tagnames work.)

* Fixed bugs in XCheck.xpath_to and XCheck.get

Other changes
^^^^^^^^^^^^^^

* Passing floats or string representation of floats to IntCheck
  raises a TypeError

Release 0.6.7 - April 16, 2013
------------------------------

* Fixed import bugs introduced in 0.6.7

Release 0.6.6 - April 15, 2013
------------------------------

* renamed xcheck submodule core
* Fixed bug 4 -- :class:`IntCheck` was using _normalize instead of normalize
  as keyword argument

Release 0.6.5 - March 9, 2013
-----------------------------

* Updated load_checker, replaced _verbose with logging